--- a/share/spice/reddit_search/footer.handlebars
+++ b/share/spice/reddit_search/footer.handlebars
@@ -1,3 +1,3 @@
 <div class="one-line">
-  {{plural data.score singular="point" plural="points"}} &middot; {{data.num_comments}} <span>Comments</span>
+  {{data.score}} &middot; {{plural data.num_comments singular="Comment" plural="Comments"}}
 </div>
