--- a/share/spice/seat_geek/sports/item.handlebars
+++ b/share/spice/seat_geek/sports/item.handlebars
@@ -1,18 +1,25 @@
 <div class="tile  tile--c tile--seat_geek" data-link="{{url}}">
     <div class="tile__body has-foot">
         <div class="header_container">
+        <img src="{{img}}" />
             <h3 class="tx-clr--dk">
                 {{condense title maxlen="43"}}
             </h3>
         </div>
         <div class="tile__content">
-            <div class="one-line">
-            <div class="where place one-line">
-                {{place}}
+            <div class="date">
+                {{#if month}}
+                    {{month}}
+                {{/if}}
+                {{#if day}}
+                    {{day}}
+                {{/if}}
+                {{#if year}}
+                    , {{year}}
+                {{/if}}
             </div>
             <div class="where city one-line">
                 {{city}}
-            </div>
             </div>
         </div>
         <div class="tile__footer">
@@ -21,18 +28,6 @@
             {{else}}
                 <div class="noprice">Price N/A</div>
             {{/if}}
-            <div class="date">
-                <div class="month">
-                    {{#if month}}
-                        {{month}}
-                    {{/if}}
-                </div>
-                <div class="day">
-                    {{#if day}}
-                        {{day}}
-                    {{/if}}
-                </div>
-            </div>
         </div>
     </div>
 </div>
